--- a/photo.api/package.json
+++ b/photo.api/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "serveur.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Pierre-Julien",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.2.9",
-    "mongose": "0.0.2-security"
+    "mongose": "0.0.2-security",
+    "multer": "^1.3.1"
   },
   "devDependencies": {},
   "description": ""
